--- a/tentang/tentang.html
+++ b/tentang/tentang.html
@@ -3,20 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Tentang Lontara - Visi, misi, dan keahlian kami dalam membangun sistem intelijen lingkungan dan tata ruang berbasis sains hidrologi."
-    />
+    <meta name="description" content="Tentang Lontara - Visi, misi, dan keahlian kami dalam membangun sistem intelijen lingkungan dan tata ruang berbasis sains hidrologi." />
     <title>Tentang | Lontara</title>
 
     <link rel="icon" type="image/png" href="../assets/images/favicon.png" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="../css/theme.css" />
     <link rel="stylesheet" href="../css/layout.css" />
@@ -24,7 +17,10 @@
     <link rel="stylesheet" href="../css/main.css" />
 
     <style>
-      /* FIX: Jarak hero agar judul tidak tertabrak sticky header */
+      /* ===============================
+         HERO SECTION (Standard Lontara)
+         Jarak aman 180px agar tidak tertutup header
+      ================================ */
       .hero-about {
         padding: 180px 0 100px;
         background-color: var(--bg-light);
@@ -35,6 +31,7 @@
         font-size: 3.2rem;
         margin-bottom: 24px;
         color: var(--primary);
+        font-weight: 800;
       }
       .hero-about p {
         font-size: 1.2rem;
@@ -44,49 +41,56 @@
         line-height: 1.7;
       }
 
-      /* Grid Visi & Misi */
+      /* ===============================
+         VISI MISI (Arsitektur Download Card)
+         Padding disamakan dengan dataset (60px)
+      ================================ */
       .vision-mission {
-        margin-top: 40px;
+        margin-top: -60px; /* Elemen sedikit naik untuk kesan modern */
         position: relative;
         z-index: 10;
       }
       .vm-card {
         background: white;
-        padding: 50px 40px;
-        border-radius: var(--radius);
-        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.08);
+        padding: 60px; /* INTERNAL PAD: Sesuai Gold Standard Dataset */
+        border-radius: 32px; /* Radius lebih lembut mengikuti download card */
+        box-shadow: 0 40px 80px rgba(0, 0, 0, 0.05);
         border: 1px solid var(--border);
         text-align: center;
         transition: var(--transition);
         height: 100%;
       }
       .vm-card:hover {
-        transform: translateY(-5px);
+        transform: translateY(-8px);
         border-color: var(--accent);
       }
       .vm-card h2 {
         color: var(--accent);
         margin-bottom: 20px;
-        font-size: 1.8rem;
+        font-size: 2rem;
+        font-weight: 800;
       }
       .vm-card p {
         color: var(--text-muted);
         line-height: 1.8;
+        font-size: 1.05rem;
       }
 
-      /* Founder Section */
+      /* ===============================
+         FOUNDER SECTION
+      ================================ */
       .founder-section {
         display: grid;
         grid-template-columns: 1fr 1.3fr;
         gap: 80px;
         align-items: center;
-        padding: 100px 0;
+        padding: 120px 0;
       }
       .founder-image-container {
         width: 100%;
         max-width: 450px;
         margin: 0 auto;
-        border-radius: var(--radius);
+        border-radius: 24px;
         overflow: hidden;
         box-shadow: 0 20px 40px rgba(0, 0, 0, 0.12);
         background: var(--bg-main);
@@ -95,55 +99,48 @@
         width: 100%;
         height: auto;
         display: block;
-        object-fit: contain;
+        object-fit: contain; /* Memastikan foto pribadi tampil proporsional */
       }
       .founder-badge {
         display: inline-block;
         padding: 6px 16px;
-        background: rgba(var(--accent-rgb), 0.1);
+        background: rgba(0, 184, 169, 0.1);
         color: var(--accent);
         border-radius: 20px;
         font-size: 0.85rem;
         font-weight: 800;
         text-transform: uppercase;
         letter-spacing: 1px;
-        margin-bottom: 20px;
+        margin-bottom: 25px;
       }
       .founder-text {
-        text-align: center;
-      } /* Rata tengah seluruh teks di bagian founder */
+        text-align: left; /* Founder teks lebih profesional jika rata kiri pada grid */
+      }
       .founder-text h2 {
-        font-size: 2.5rem;
+        font-size: 2.8rem;
         margin-bottom: 25px;
         color: var(--primary);
+        font-weight: 800;
       }
       .founder-text p {
         color: var(--text-muted);
         margin-bottom: 20px;
         line-height: 1.8;
-        font-size: 1.05rem;
+        font-size: 1.1rem;
       }
 
-      /* CUSTOM CTA SECTION */
+      /* CTA SECTION */
       .section-cta-green {
         background-color: #123b3a !important;
         color: white !important;
         text-align: center;
         padding: 100px 0;
       }
-      .section-cta-green h2 {
-        color: white !important;
-        margin-bottom: 20px;
-      }
-      .section-cta-green p {
-        color: rgba(255, 255, 255, 0.9) !important;
-        margin-bottom: 40px;
-      }
       .btn-cta-white {
         background-color: white !important;
         color: #123b3a !important;
-        padding: 16px 40px;
-        border-radius: 8px;
+        padding: 16px 45px;
+        border-radius: 12px;
         font-weight: 800;
         font-size: 1.1rem;
         display: inline-block;
@@ -151,22 +148,15 @@
         text-decoration: none;
       }
 
+      /* RESPONSIVE PADDING */
       @media (max-width: 992px) {
-        .founder-section {
-          grid-template-columns: 1fr;
-          gap: 50px;
-        }
-        .founder-image-container {
-          max-width: 350px;
-        }
+        .founder-section { grid-template-columns: 1fr; gap: 50px; text-align: center; }
+        .founder-text { text-align: center; }
+        .vm-card { padding: 40px 25px; } /* Pad mobile yang Anda sukai */
       }
       @media (max-width: 768px) {
-        .hero-about {
-          padding: 140px 0 60px;
-        }
-        .hero-about h1 {
-          font-size: 2.2rem;
-        }
+        .hero-about { padding: 140px 0 60px; }
+        .hero-about h1 { font-size: 2.4rem; }
       }
     </style>
   </head>
@@ -179,52 +169,21 @@
       <div class="container nav-container">
         <div class="logo">
           <a href="../beranda.html">
-            <img
-              src="../assets/images/logo.png"
-              alt="Lontara Logo"
-              width="120"
-              height="38"
-            />
+            <img src="../assets/images/logo.png" alt="Lontara Logo" width="120" height="38" />
           </a>
         </div>
 
         <nav class="nav" id="nav-menu">
           <button class="nav-close" id="nav-close" aria-label="Tutup Menu">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-            >
-              <line x1="18" y1="6" x2="6" y2="18"></line>
-              <line x1="6" y1="6" x2="18" y2="18"></line>
-            </svg>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
           </button>
-
-          <div class="nav-item">
-            <a href="../layanan/layanan.html">Layanan</a>
-          </div>
-          <div class="nav-item">
-            <a href="../portofolio/portofolio.html">Portofolio</a>
-          </div>
-          <div class="nav-item">
-            <a href="../artikel/artikel.html">Artikel</a>
-          </div>
-          <div class="nav-item">
-            <a href="../publikasi/publikasi.html">Publikasi</a>
-          </div>
-          <div class="nav-item">
-            <a href="../aset-digital/aset-digital.html">Aset Digital</a>
-          </div>
-          <div class="nav-item">
-            <a href="tentang.html" class="active">Tentang</a>
-          </div>
-
-          <div class="nav-item nav-item-cta">
-            <a href="../kontak/kontak.html" class="nav-link-cta">Kontak</a>
-          </div>
+          <div class="nav-item"><a href="../layanan/layanan.html">Layanan</a></div>
+          <div class="nav-item"><a href="../portofolio/portofolio.html">Portofolio</a></div>
+          <div class="nav-item"><a href="../artikel/artikel.html">Artikel</a></div>
+          <div class="nav-item"><a href="../publikasi/publikasi.html">Publikasi</a></div>
+          <div class="nav-item"><a href="../aset-digital/aset-digital.html">Aset Digital</a></div>
+          <div class="nav-item"><a href="tentang.html" class="active">Tentang</a></div>
+          <div class="nav-item nav-item-cta"><a href="../kontak/kontak.html" class="nav-link-cta">Kontak</a></div>
         </nav>
 
         <div class="nav-actions"></div>
@@ -237,13 +196,9 @@
     <main>
       <section class="hero-about">
         <div class="container">
-          <h1 class="reveal-init">
-            Menjembatani Sains Lahan & Teknologi Spasial
-          </h1>
+          <h1 class="reveal-init">Menjembatani Sains Lahan & Teknologi Spasial</h1>
           <p class="reveal-init">
-            Lontara adalah studio pemodelan lingkungan yang berdedikasi
-            mentransformasi pengambilan keputusan tata ruang berbasis data
-            prediktif dan rekayasa cerdas.
+            Lontara adalah studio pemodelan lingkungan yang berdedikasi mentransformasi pengambilan keputusan tata ruang berbasis data prediktif dan rekayasa cerdas.
           </p>
         </div>
       </section>
@@ -254,17 +209,13 @@
             <div class="vm-card reveal-init">
               <h2>Visi Kami</h2>
               <p>
-                Menjadi pelopor infrastruktur data spasial dalam pengelolaan
-                lingkungan hidup, memastikan setiap kebijakan didasarkan pada
-                perhitungan ekologis yang presisi.
+                Menjadi pelopor infrastruktur data spasial dalam pengelolaan lingkungan hidup, memastikan setiap kebijakan didasarkan pada perhitungan ekologis yang presisi.
               </p>
             </div>
             <div class="vm-card reveal-init">
               <h2>Misi Kami</h2>
               <p>
-                Menyediakan alat rekayasa data dan dasbor WebGIS yang transparan
-                untuk membantu evaluasi kesesuaian lahan serta mitigasi risiko
-                hidrologi.
+                Menyediakan alat rekayasa data dan dasbor WebGIS yang transparan untuk membantu evaluasi kesesuaian lahan serta mitigasi risiko hidrologi.
               </p>
             </div>
           </div>
@@ -275,45 +226,22 @@
         <div class="container">
           <div class="founder-section">
             <div class="founder-image-container reveal-init">
-              <img
-                src="../assets/images/foto-pribadi.jpeg"
-                alt="Fajar Nugraha"
-              />
+              <img src="../assets/images/foto-pribadi.jpeg" alt="Fajar Nugraha" />
             </div>
 
             <div class="founder-text reveal-init">
               <span class="founder-badge">Founder & Lead Engineer</span>
               <h2>Fajar Nugraha</h2>
               <p>
-                Lontara lahir dari visi bahwa sains lingkungan membutuhkan
-                rekayasa teknologi untuk solusi nyata. Kami fokus pada
-                pengembangan sistem pendukung keputusan yang akurat.
+                Lontara lahir dari visi bahwa sains lingkungan membutuhkan rekayasa teknologi untuk solusi nyata. Kami fokus pada pengembangan sistem pendukung keputusan yang akurat.
               </p>
               <p>
-                Berlatar belakang <strong>Ilmu Tanah</strong> dari
-                <strong>Universitas Hasanuddin</strong> dan pascasarjana di
-                <strong>IPB University</strong>, Fajar menggabungkan kepakaran
-                hidrologi dengan otomasi Python dan Spatial Machine Learning.
+                Berlatar belakang <strong>Ilmu Tanah</strong> dari <strong>Universitas Hasanuddin</strong> dan pascasarjana di <strong>IPB University</strong>, Fajar menggabungkan kepakaran hidrologi dengan otomasi Python dan Spatial Machine Learning.
               </p>
 
-              <div
-                style="
-                  display: flex;
-                  gap: 15px;
-                  flex-wrap: wrap;
-                  margin-top: 35px;
-                  justify-content: center;
-                "
-              >
-                <a href="../kontak/kontak.html" class="btn-primary"
-                  >Hubungi Saya</a
-                >
-                <a
-                  href="https://linkedin.com/in/fajar-nugraha23"
-                  target="_blank"
-                  class="btn-secondary"
-                  >Profil LinkedIn</a
-                >
+              <div style="display: flex; gap: 15px; flex-wrap: wrap; margin-top: 35px;">
+                <a href="../kontak/kontak.html" class="btn-primary">Hubungi Saya</a>
+                <a href="https://linkedin.com/in/fajar-nugraha23" target="_blank" class="btn-secondary">Profil LinkedIn</a>
               </div>
             </div>
           </div>
@@ -322,17 +250,10 @@
 
       <section class="section-cta-green">
         <div class="container">
-          <h2 class="reveal-init">
-            Mari Berkolaborasi Demi Lingkungan yang Cerdas
-          </h2>
-          <p class="reveal-init">
-            Diskusikan kebutuhan riset atau implementasi sistem intelijen
-            spasial instansi Anda bersama kami.
-          </p>
+          <h2 class="reveal-init">Mari Berkolaborasi Demi Lingkungan yang Cerdas</h2>
+          <p class="reveal-init">Diskusikan kebutuhan riset atau implementasi sistem intelijen spasial instansi Anda bersama kami.</p>
           <div class="reveal-init">
-            <a href="../kontak/kontak.html" class="btn-cta-white"
-              >Hubungi Kami Sekarang</a
-            >
+            <a href="../kontak/kontak.html" class="btn-cta-white">Hubungi Kami Sekarang</a>
           </div>
         </div>
       </section>
@@ -342,15 +263,9 @@
       <div class="container footer-container">
         <div>
           <h4 style="margin-bottom: 10px">Lontara</h4>
-          <p style="font-size: 0.9rem; color: var(--text-muted)">
-            Environmental & Land Intelligence Studio.
-          </p>
+          <p style="font-size: 0.9rem; color: var(--text-muted)">Environmental & Land Intelligence Studio.</p>
         </div>
-        <div>
-          <p style="font-size: 0.9rem; color: var(--text-muted)">
-            &copy; 2026 Lontara. Seluruh Hak Cipta Dilindungi.
-          </p>
-        </div>
+        <p style="font-size: 0.9rem; color: var(--text-muted)">&copy; 2026 Lontara. Seluruh Hak Cipta Dilindungi.</p>
       </div>
     </footer>
 
